--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js",
+        "start": "node server.js",
         "format": "prettier --write \"**/*.{js,json,md}\""
     },
     "repository": {
@@ -21,8 +21,7 @@
     "dependencies": {
         "axios": "^1.7.7",
         "dotenv": "^16.4.5",
-        "express": "^4.21.0",
-        "nodemon": "^3.1.5"
+        "express": "^4.21.0"
     },
     "devDependencies": {
         "prettier": "^3.3.3"
