--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dependencies": {
         "axios": "^1.7.7",
         "dotenv": "^16.4.5",
-        "express": "^4.21.0"
+        "express": "^4.21.0",
+        "express-session": "^1.18.0"
     },
     "devDependencies": {
         "prettier": "^3.3.3"
