--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "start-nodemon": "nodemon server.js",
+        "start": "nodemon server.js",
         "format": "prettier --write \"**/*.{js,json,md}\""
     },
     "repository": {
