--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,12 @@
 {
+  "printWidth": 90,
+  "tabWidth": 4,
+  "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "tabWidth": 4,
   "trailingComma": "es5",
-  "printWidth": 80
+  "bracketSpacing": true,
+  "jsxSingleQuote": true,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
