--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "da-api-connection",
-    "version": "0.3.3",
+    "version": "0.3.4",
     "description": "Учебный проект по созданию кастомных виджетов для OBS с использованием API сервиса Donation Alerts. Цель проекта — изучение интеграции внешних API и создание настраиваемых элементов для трансляций. Включает разработку и тестирование виджетов для отображения донатов и других событий на стримах.",
     "main": "server.js",
+    "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon server.js",
